<resources>
    <string name="app_name">PassMyClass</string>
    <string name="facebook_app_id">326384861170355</string>
    <string name="fb_login_protocol_scheme">fb875333829286542</string>

    <string name="authenticating">Authenticating…</string>
    <string name="password">Password</string>
    <string name="creating_user">Creating User</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="hint_email">Email</string>
    <string name="email">Email</string>
    <string name="log_out">Log Out</string>
    <string name="logging_in">Logging in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="posts">posts</string>
    <string name="new_post">new</string>
    <string name="messages">No New Messages</string>
    <string name="profile">Profile</string>
    <string name="create">create</string>
    <string name="create_account">No account yet? Create one</string>
    <string name="Search">search</string>
    <string name="choose_your_role">Choose your role</string>
    <string name="tutor">Tutor</string>
    <string name="student">Student</string>

    <string name="subject_prompt">Subject</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="apply">Apply</string>
    <string name="applied">Applied</string>
    <string name="suggested_price">Suggested Price</string>
    <string name="suggested_rate">Suggested Rate</string>
    <string name="rate">Rate</string>
    <string name="not_set">Not Set</string>
    <string name="search">Search</string>
    <string name="send_button_description">send_button</string>
    <string name="message_prompt">Write a message</string>
    <string name="alice_filler_text">\tHello, my name is Alice and I am currently a graduate student
    in economics. I would like to tutor in my free time in order to help in my goal of
    becoming a teacher! I have been helping students with assignments and exams for around 2 years.
     I am very friendly and will hopefully provide a stress-free tutoring session to anyone
        seeking my help!</string>
    <string name="message">Message</string>
    <string name="rating_max">/5.0</string>
    <string name="per_hour">/hr</string>
    <string name="heard_about_text">How did you hear about us? (Optional)</string>
    <string name="create_account_tag">Create Account</string>
    <string name="already_a_member_login_tag">Already a member? Login</string>
    <string name="re_enter_password_tag">Re-enter Password</string>
    <string name="password_tag">Password</string>
    <string name="age_optional_tag">Age (Optional)</string>
    <string name="email_tag">Email</string>
    <string name="username_tag">Username</string>
    <string name="name_tag">Name</string>
    <string name="what_help_do_you_need">What help do you need?</string>
    <string name="price">Price</string>
    <string name="request_tutor">Request Tutor</string>

    <string-array name="subject_arrays">
        <item>BUSINESS 2257</item>
        <item>PSYCHOL 1000</item>
        <item>CALCULUS 1000</item>
        <item>ECONOMIC 1021</item>
        <item>CHEM 1302</item>
        <item>ECONOMIC 1022</item>
        <item>CHEM 1301</item>
        <item>MATH 1228</item>
        <item>COMPSCI 1033</item>
        <item>GEOGRAPH 2144</item>
        <item>BIOCHEM 2280</item>
        <item>MOS 2275</item>
        <item>MOS 2181</item>
        <item>CHEM 2213</item>
        <item>BIOLOGY 2382</item>
        <item>PSYCHOL 2070</item>
        <item>BIOLOGY 2581</item>
    </string-array>

    <string-array name="referred_array">
        <item>Choose One</item>
        <item>Student Ambassador</item>
        <item>Facebook</item>
        <item>Instagram</item>
        <item>From a friend</item>
        <item>LinkedIn</item>
        <item>Other</item>
    </string-array>
</resources>
