<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_posts"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/posts" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/Search" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/messages" />

    <!--<item-->
    <!--android:id="@+id/navigation_notifications"-->
    <!--android:icon="@drawable/ic_notifications_black_24dp"-->
    <!--android:title="@string/notifications" />-->

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />

</menu>