<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:context="com.austinabell8.studyspace.activities.RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="36dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:scaleType="centerInside"
            android:layout_marginBottom="8dp"
            android:src="@drawable/studyspace_logo"/>

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_ame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:theme="@style/TextLabel">
            <EditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_white_1000"
                android:inputType="textPersonName"
                android:hint="@string/name_tag" />
        </android.support.design.widget.TextInputLayout>

        <!-- Address Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:theme="@style/TextLabel">
            <EditText
                android:id="@+id/edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_white_1000"
                android:inputType="textPostalAddress"
                android:hint="@string/username_tag" />
        </android.support.design.widget.TextInputLayout>

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:theme="@style/TextLabel">
            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_white_1000"
                android:inputType="textEmailAddress"
                android:hint="@string/email_tag" />
        </android.support.design.widget.TextInputLayout>

        <!--  Age Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:theme="@style/TextLabel">
            <EditText
                android:id="@+id/edit_text_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_white_1000"
                android:inputType="number"
                android:hint="@string/age_optional_tag" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:theme="@style/TextLabel">
            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_white_1000"
                android:inputType="textPassword"
                android:hint="@string/password_tag"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Re-enter Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:theme="@style/TextLabel">
            <EditText
                android:id="@+id/edit_text_re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_white_1000"
                android:inputType="textPassword"
                android:hint="@string/re_enter_password_tag"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="6dp"
            android:textColor="@color/md_grey_800"
            android:text="@string/heard_about_text"
            android:gravity="center"
            android:textSize="16dip"/>

        <Spinner
            android:id="@+id/spinner_course"
            android:backgroundTint="@color/md_white_1000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp" />

        <!-- Password Re-enter Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:visibility="gone"
            android:theme="@style/TextLabel">
            <EditText
                android:id="@+id/edit_text_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_white_1000"
                android:hint=""/>
        </android.support.design.widget.TextInputLayout>


        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_sign_up"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textColor="@color/md_white_1000"
            android:paddingBottom="8dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/create_account_tag"/>

        <TextView android:id="@+id/text_login_link"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColor="@color/md_white_1000"
            android:text="@string/already_a_member_login_tag"
            android:gravity="center"
            android:textSize="16dp"/>

    </LinearLayout>
</ScrollView>