<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:context="com.austinabell8.studyspace.activities.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="46dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="18dp"
            android:src="@drawable/studyspace_logo"/>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextLabel">
            <EditText android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_white_1000"
                android:inputType="textEmailAddress"
                android:hint="@string/email_tag" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/TextLabel">
            <EditText android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/md_white_1000"
                android:inputType="textPassword"
                android:hint="@string/password_tag"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_login"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/md_white_1000"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sign_in"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/button_facebook_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:layout_marginBottom="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

        <TextView android:id="@+id/text_sign_up"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/md_white_1000"
            android:layout_marginBottom="24dp"
            android:text="@string/create_account"
            android:gravity="center"
            android:textSize="16dp"/>


    </LinearLayout>
</ScrollView>